# nyc-taxi-data-pipeline

./: .gitignore  README.md  pyproject.toml
ifood-case/src/config/: source_to_raw.yaml
ifood-case/src/pipelines/source-to-raw/scrapers/nyc/trip_record/: load_trip_record.py
ifood-case/src/utils/: io.py  logger.py  playwright_utils.py  utility.py
