[project]
name = "nyc-taxi-data-pipeline"
version = "1.0.0"
description = "Blank for now"
authors = [
    {name = "Leandro Gonçalves",email = "leandroa448@gmail.com"}
]
license = {text = "None"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "pyspark (>=4.0.0,<5.0.0)",
    "playwright (>=1.54.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

